--- a/styles/style.css
+++ b/styles/style.css
@@ -23,12 +23,22 @@ header {
     border: 5px solid tomato;
     background-color: #161616;
     border-radius: 30px;
+    transition-property: unset;
+    transition-duration: 2s;
+    transition-delay: 0.3s;
+    transition-timing-function: ease-in-out;
+}
 
+.banner:hover {
+    width: 80%;
 }
 
 .head-container {
     display: flex;
+
 }
+
+
 
 .head-info {
     margin: 130px 105px;
@@ -53,7 +63,11 @@ header {
     height: 56px;
     border-radius: 5px;
     background-color: tomato;
+    font-size: 1em;
 }
+
+
+
 
 .head-pic img {
 
@@ -62,6 +76,16 @@ header {
     height: 632px;
     margin: 13px 0px;
 }
+
+/* Transition Section */
+/* .head-container {
+    transition-property: width;
+    transition-duration: 0.5s;
+    transition-delay: 0.3s;
+    transition-timing-function: ease-in;
+} */
+
+
 
 /* Menu & Blog section */
 .second-part {
@@ -80,7 +104,22 @@ header {
     height: 64px;
     border-radius: 5px;
     border: none;
+    font-size: 1em;
 
+}
+
+.menu button:hover {
+
+    background-color: gray;
+}
+
+.menu button a {
+    text-decoration: none;
+
+}
+
+.menu button a:visited {
+    color: #161616;
 }
 
 .menu {
@@ -115,6 +154,10 @@ header {
     border: 1px solid gray;
 }
 
+.blog:hover {
+    opacity: 0.8;
+}
+
 .blog-banner img {
     width: 100%;
 
@@ -134,6 +177,10 @@ header {
 .blog-title {
     font-weight: 900;
     font-size: 22px;
+}
+
+.blog-footer img {
+    vertical-align: middle;
 }
 
 .blog-footer {
@@ -158,6 +205,11 @@ header {
     border: 1px solid gray;
 }
 
+.match:hover {
+    opacity: 0.8;
+
+}
+
 .match-banner {
     margin-top: 50px;
     display: flex;
@@ -175,6 +227,40 @@ header {
 
 .match-info p {
     text-align: center;
+}
+
+/* View All Button For Tablet */
+.view-button {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 70px;
+}
+
+.view-button button {
+    width: 131px;
+    height: 47px;
+    border-radius: 5px;
+    border: none;
+    background-color: tomato;
+    font-size: 1em;
+}
+
+.view-button a {
+    text-decoration: none;
+
+}
+
+.view-button a:visited {
+    color: #161616;
+}
+
+.view-button button:hover {
+    background-color: gray;
+    opacity: 0.5;
+}
+
+.view-button {
+    display: none;
 }
 
 /* footer section */
@@ -231,4 +317,20 @@ footer ul li a {
     text-decoration: none;
     color: #FFFFFF;
 
+}
+
+footer ul li a:hover {
+    opacity: 0.5;
+}
+
+.footer-social ul li a {
+    font-size: 1.5em;
+}
+
+/* RESPONSIVE FOR MOBILE DEVICE */
+
+@media screen and (max width: 688px) {
+    .banner {
+        width: 100%;
+    }
 }
