--- a/styles/style.css
+++ b/styles/style.css
@@ -38,8 +38,6 @@ header {
 
 }
 
-
-
 .head-info {
     margin: 130px 105px;
 }
@@ -76,16 +74,6 @@ header {
     height: 632px;
     margin: 13px 0px;
 }
-
-/* Transition Section */
-/* .head-container {
-    transition-property: width;
-    transition-duration: 0.5s;
-    transition-delay: 0.3s;
-    transition-timing-function: ease-in;
-} */
-
-
 
 /* Menu & Blog section */
 .second-part {
@@ -330,6 +318,9 @@ footer ul li a:hover {
 /* RESPONSIVE FOR MOBILE DEVICE */
 
 @media only screen and (max-width:688px) {
+
+    /* Header Section */
+
     .banner {
         width: auto;
     }
@@ -338,6 +329,8 @@ footer ul li a:hover {
         font-size: 35px;
         margin: 0;
     }
+
+    /* Menu & Blog Section */
 
     .second-container {
         display: block;
@@ -348,6 +341,8 @@ footer ul li a:hover {
         grid-template-columns: repeat(1, 1fr);
 
     }
+
+    /* Footer section */
 
     footer {
         width: auto;
@@ -369,6 +364,9 @@ footer ul li a:hover {
 /* RESPONSIVE FOR TABLET DEVICE */
 
 @media only screen and (min-width:688px) and (max-width:992px) {
+
+    /* Header Section */
+
     .banner {
         width: auto;
     }
@@ -381,6 +379,8 @@ footer ul li a:hover {
     .head-pic img {
         width: 80%;
     }
+
+    /* Menu & Blog Section */
 
     .second-container {
         display: block;
@@ -397,8 +397,6 @@ footer ul li a:hover {
         margin-bottom: 40px;
     }
 
-
-
     .blogs {
         grid-template-columns: repeat(2, 1fr);
 
@@ -408,13 +406,15 @@ footer ul li a:hover {
         width: 90%
     }
 
-
+    /* View Button Section */
 
     .view-button {
         display: block;
         margin: 0 50%;
         margin-bottom: 50px;
     }
+
+    /* Footer Section */
 
     footer {
         width: auto;
